Really apply the env argument to dwh-migration-dumper application instead.