@@ -100,6 +100,9 @@ application {
     // Define the main class for the application.
     mainClass = 'com.google.edwmigration.dumper.application.dumper.Main'
     applicationName = 'dwh-migration-dumper'
+
+    // "ALL-UNNAMED" option is required as a workaround for Snowflake JDBC Driver error.
+    applicationDefaultJvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
 }
 
 task cloudExtractorStartScripts(type: CreateStartScripts) {
